# learn-mlir

./: CMakeLists.txt  build.sh  build_llvm.sh
lib/: CMakeLists.txt
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/Poly/: CMakeLists.txt  Poly.td  PolyBase.td  PolyDialect.cpp  PolyDialect.h  PolyOps.cpp  PolyOps.h  PolyPatterns.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
lib/Transform/: CMakeLists.txt
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h  Passes.td
tests/: CMakeLists.txt  add.mlir  affine-full-unroll.mlir  affine_full_unroll.mlir  lit.cfg.py  lit.site.cfg.py.in  mul_to_add.mlir  poly_canonicalize.mlir  poly_cse.mlir  poly_sccp.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_llvm_main.c  poly_to_standard.mlir  poly_verifier.mlir
tools/: CMakeLists.txt  FooOpt.cpp
